@@ -39,17 +39,38 @@ Description: common files for schroot
  This package provides translations for localisation of schroot
  programs.
 
+Package: libsbuild-1.7.0
+Architecture: any
+Section: libs
+Depends:
+ ${misc:Depends}
+Suggests: libsbuild-1.7.0-dbg
+Description: shared library for the Debian source builder
+ libsbuild provides facilities to manage and access chroots, as part of
+ schroot.
+ .
+ schroot allows users to execute commands or interactive shells in
+ different chroots.  Any number of named chroots may be created, and
+ access permissions given to each, including root access for normal
+ users, on a per-user or per-group basis.  Additionally, schroot can
+ switch to a different user in the chroot, using PAM for
+ authentication and authorisation.  All operations are logged for
+ security.
+ .
+ This package contains the shared library.
+
 Package: libsbuild-dev
 Architecture: any
 Section: libdevel
 Depends:
  ${misc:Depends},
+ libsbuild-1.7.0 (= ${binary:Version}),
  pkg-config (>= 0.14.0)
 Suggests:
- schroot-dbg,
+ libsbuild-1.7.0-dbg,
  libsbuild-doc
 Description: development files for the Debian source builder
- sbuild provides facilities to manage and access chroots, as part of
+ libsbuild provides facilities to manage and access chroots, as part of
  schroot.
  .
  schroot allows users to execute commands or interactive shells in
@@ -60,23 +81,20 @@ Description: development files for the Debian source builder
  authentication and authorisation.  All operations are logged for
  security.
  .
- This package contains the header files and static library needed to
- develop applications which make use of sbuild.  Once the API and ABI
- are stable, a shared library will replace the static library.
+ This package contains the header files needed to develop applications
+ which make use of sbuild.
 
-Package: schroot-dbg
+Package: libsbuild-1.7.0-dbg
 Architecture: any
 Section: debug
 Priority: extra
 Depends:
  ${misc:Depends},
- schroot (= ${binary:Version}) | dchroot (= ${binary:Version}) | dchroot-dsa (= ${binary:Version})
+ libsbuild-1.7.0 (= ${binary:Version}),
 Conflicts:
- schroot (<< ${binary:Version}), schroot (>> ${binary:Version}),
- dchroot (<< ${binary:Version}), dchroot (>>${binary:Version}),
- dchroot-dsa (<< ${binary:Version}), dchroot-dsa (>>${binary:Version})
-Description: schroot, dchroot and dchroot-dsa debugging symbols
- sbuild provides facilities to manage and access chroots, as part of
+ schroot-dbg
+Description: Debugging symbols for the Debian source builder
+ libsbuild provides facilities to manage and access chroots, as part of
  schroot.
  .
  schroot allows users to execute commands or interactive shells in
@@ -87,8 +105,8 @@ Description: schroot, dchroot and dchroot-dsa debugging symbols
  authentication and authorisation.  All operations are logged for
  security.
  .
- This package contains debugging symbols for the schroot, dchroot
- and dchroot-dsa packages.
+ This package contains debugging symbols for the libsbuild package,
+ and dependent packages including schroot, dchroot and dchroot-dsa.
 
 Package: libsbuild-doc
 Architecture: all
@@ -96,7 +114,7 @@ Section: doc
 Depends: ${misc:Depends}
 Suggests: libsbuild-dev
 Description: development documentation for the Debian source builder
- sbuild provides facilities to manage and access chroots, as part of
+ libsbuild provides facilities to manage and access chroots, as part of
  schroot.
  .
  schroot allows users to execute commands or interactive shells in
@@ -108,7 +126,7 @@ Description: development documentation for the Debian source builder
  security.
  .
  This package contains the API documentation needed to develop
- applications which make use of sbuild.
+ applications which make use of libsbuild.
 
 Package: schroot
 Architecture: any
