@@ -1,0 +1,1 @@
+debian/install/@LIBDIR@/libsbuild-*.so  @LIBDIR@
