@@ -1,3 +1,3 @@
 debian/install/usr/include          usr
-debian/install/@LIBDIR@/libsbuild.a  @LIBDIR@
+debian/install/@LIBDIR@/libsbuild.so  @LIBDIR@
 debian/install/@LIBDIR@/pkgconfig    @LIBDIR@
