@@ -44,7 +44,6 @@ override_dh_auto_configure: debian/build/config.status
 debian/build/config.status: configure
 	dh_auto_configure -- \
 	  --enable-dchroot --enable-dchroot-dsa \
-	  --enable-static --disable-shared \
 	  --with-bash-completion-dir=/etc/bash_completion.d \
 	  $(LVMSNAP_OPTIONS) $(BTRFSSNAP_OPTIONS) \
 	  BTRFS=/sbin/btrfs \
@@ -61,10 +60,10 @@ override_dh_auto_clean:
 
 override_dh_auto_build:
 ifneq (,$(shell dh_listpackages -a 2>/dev/null))
-	$(MAKE) -C debian/build all PO4A=
+	$(MAKE) -C debian/build all V=1 PO4A=
 endif
 ifneq (,$(shell dh_listpackages -i 2>/dev/null))
-	$(MAKE) -C debian/build doc PO4A=
+	$(MAKE) -C debian/build doc V=1 PO4A=
 endif
 
 override_dh_auto_test:
@@ -114,6 +113,6 @@ override_dh_installinit:
 	dh_installinit --no-start --update-rcd-params='defaults'
 
 override_dh_strip:
-	dh_strip --dbg-package=schroot-dbg
+	dh_strip --dbg-package=libsbuild-1.7.0-dbg
 
 .PHONY: override_dh_auto_configure override_dh_auto_clean override_dh_auto_build override_dh_auto_test override_dh_auto_install override_dh_installchangelogs override_dh_installinit override_dh_strip install-arch install-indep
