@@ -10,6 +10,14 @@ schroot (1.7.0-1) UNRELEASED; urgency=low
       been re-added to support unsharing network devices.  These
       are regular setup scripts, called with an exec-start or
       exec-start argument.
+  * libsbuild-1.7.0:
+    - New package
+    - Introduce a shared library.
+  * libsbuild-1.7.0-dev:
+    - New package.
+    - Shared library debugging symbols.
+  * libsbuild-dev:
+    - Remove static library, and include shared library symlink.
   * debian/copyright: Update to use DEP-5 copyright format v1.0.
   * debian/control: Remove liblockdev and libuuid from Build-Depends. 
   * debian/rules:
